[project]
name = "langgraph-studio-local"
version = "0.1.0"
description = "Local LangGraph Studio environment"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "langgraph>=0.2.0",
  "langchain-ollama>=0.3.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
